# ProtexDataBuilder

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PRODUCTION_SPEC.md  USAGE.md  project_report.md
infra/aws/: variables.tf  versions.tf
infra/aws/envs/dev/: main.tf  terraform.tfvars  variables.tf
infra/aws/envs/prod/: main.tf  terraform.tfvars  variables.tf
infra/aws/modules/batch/: main.tf  outputs.tf  variables.tf
infra/aws/modules/ec2/: main.tf  user_data.sh  variables.tf
infra/aws/modules/ecr/: main.tf
notebooks/: video_pipeline.ipynb
pipeline/: cli.py  constants.py
pipeline/config/: base.yaml  dev.yaml
pipeline/core/detect/: detector.py  stats.py
pipeline/core/extract/: extractor.py
pipeline/core/preprocess/: blur_detector.py  deduplicator.py  runner.py
pipeline/core/report/: comet_logger.py  reporter.py
pipeline/models/: base.py  hf.py  yolo.py
pipeline/utils/: helpers.py  paths.py  timing.py
pipeline/validation/: validator.py
tests/: conftest.py
tests/integration/: test_pipeline_outputs.py
tests/unit/core/detect/: test_detector.py  test_stats.py
tests/unit/core/extract/: test_extractor.py
tests/unit/core/preprocess/: test_blur_detection.py  test_deduplication.py  test_runner.py
tests/unit/core/report/: test_comet_logger.py  test_reporter.py
tests/unit/models/: test_hf_runner.py  test_yolo_runner.py
tests/unit/utils/: test_helpers.py  test_paths.py
tests/unit/validation/: test_validator.py
