# pyproject.toml
[tool.poetry]
name = "mlops-pipeline"
version = "0.1.0"
description = "Protex AI Dataset Generation Pipeline"
authors = ["Ioannis Gkinis giannisginis53@gmail.com"]
readme = "README.md"
packages = [{ include = "pipeline" }]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9"
typer = { extras = ["all"], version = "^0.12.3" }
tqdm = "^4.66"
ultralytics = "^8.1"
pillow = "^10.3"
imagehash = "^4.3"
deepmerge = "^2.0"
transformers = "^4.54.0"
timm = "^1.0.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.1"
pre-commit = "^4.2.0"
black = "^25.1.0"
types-pyyaml = "^6.0.12.20250516"
mypy = "^1.17.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
diff-cover = "^9.6.0"

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.black]
exclude = '''
/(
    \.venv
  | \.git
  | \.mypy_cache
  | \.ruff_cache
  | \.pytest_cache
  | \.notebooks
  | build
  | dist
)/
'''

[tool.ruff]
exclude = [
  ".venv",
  ".git",
  "build",
  "dist",
  "notebooks"
]

[tool.mypy]
python_version = "3.10"
files = ["pipeline", "tests"]
ignore_missing_imports = true
